styles.css
header {
    background: linear-gradient(
        -90deg,
        #424242 35%,
        #ffffff
      );
}
h1 {
    color: #000
}
body {
    background: linear-gradient(
    45deg,
    #242424,
    #424242
  );
}
* {
    font-family: Input, monospace;
    color: #fff
}
a {
    background: linear-gradient(
        90deg,
        #5D0064 35%,
        #1D0064
      );
}
footer {
    background: linear-gradient(
        45deg,
        #5D0064 35%,
        #1D0064
    );
}
#footer {
    background-color: #fff;
    position: absolute;
    bottom: 0;
    left: 0;
}

